--- a/simple-todo-list/index.html
+++ b/simple-todo-list/index.html
@@ -10,21 +10,21 @@
 </head>
 <body>
     <main>
-        <header>
+        <header class="header">
             <h1>Today's To Do</h1>
             <input class="to-do-input" type="text" placeholder="Add Your To Do">
         </header>
 
         <div class="list">
             <ul class="to-do-list">
-                <li class="to-do">
+                <!-- <li class="to-do">
                     <input class="to-do-done" type="checkbox">
                     <span class="to-do-text">some text</span>
                 </li>
                 <li class="to-do">
                     <input class="to-do-done" type="checkbox">
                     <span class="to-do-text">some text</span>
-                </li>
+                </li> -->
             </ul>
             <button class="clear">Clear</button>
         </div>
