--- a/hover-animation-box/index.html
+++ b/hover-animation-box/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="card">
         <div class="imgbox">
-            <img src="image.png">
+            <img src="nike-air-max.jpg">
         </div>
         <div class="details">
             <h3>
