--- a/custom-right-click-menu/index.html
+++ b/custom-right-click-menu/index.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="style.css" />
 
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+
         <script src="script.js" defer></script>
         <title>Custom Right Click Custom Menu</title>
     </head>
@@ -13,52 +15,52 @@
             <div class="content">
                 <ul class="menu">
                     <li class="item">
-                        <i class="eye"></i>
+                        <i class="fa-solid fa-eye"></i>
                         <span>Preview</span>
                     </li>
 
                     <li class="item share">
                         <div>
-                            <i class="share---icon"></i>
+                            <i class="fa-solid fa-share"></i>
                             <span>Share</span>
                         </div>
 
-                        <i class="-right-angle">r</i>
+                        <i class="fa-solid fa-angle-right"></i>
 
                         <ul class="share-menu">
                             <li class="item">
-                                <i class="instagram"></i>
+                                <i class="fa-brands fa-square-instagram"></i>
                                 <span>Instagram</span>
                             </li>
                             <li class="item">
-                                <i class="twitter"></i>
+                                <i class="fa-brands fa-square-x-twitter"></i>
                                 <span>Twitter</span>
                             </li>
                             <li class="item">
-                                <i class="telegram"></i>
+                                <i class="fa-brands fa-telegram"></i>
                                 <span>Telegram</span>
                             </li>
                         </ul>
                     </li>
 
                     <li class="item">
-                        <i class="link"></i>
+                        <i class="fa-solid fa-link"></i>
                         <span>Copy Link</span>
                     </li>
 
                     <li class="item">
-                        <i class="edit"></i>
+                        <i class="fa-solid fa-pen-to-square"></i>
                         <span>Edit</span>
                     </li>
 
                     <li class="item">
-                        <i class="delete"></i>
+                        <i class="fa-solid fa-trash"></i>
                         <span>Delete</span>
                     </li>
 
                     <div class="setting">
                         <li class="item">
-                            <i class="setting---icon"></i>
+                            <i class="fa-solid fa-gear"></i>
                             <span>Setting</span>
                         </li>
                     </div>
